--- a/src/main/resources/templates/email/confirmacaoPedido.html
+++ b/src/main/resources/templates/email/confirmacaoPedido.html
@@ -21,7 +21,7 @@
       </p>
       <p>
         Situação do pagamento:
-        <span th:text="${pedido.pagamento.estado.descricao}"></span>
+        <span th:text="${pedido.pagamento.estadoPagamento.descricao}"></span>
       </p>
       <h3>Detalhes do pedido:</h3>
       <table border="1">
